attempt to fix centering on ie

--- a/styles/style.css
+++ b/styles/style.css
@@ -293,6 +293,13 @@ body {
     margin-bottom: 40px;
 }
 
+@media screen and (min-width: 1288px) {
+    .DocSiteProduct-header--core,
+    .DocSiteProduct-linkContainer--core {
+        margin-left: calc(50% - 644px);
+    }
+}
+
 @media screen and (min-width: 761px) {
     .DocSite {
         justify-content: flex-start;
@@ -308,7 +315,7 @@ body {
 
     .DocSiteProduct-header--core,
     .DocSiteProduct-linkContainer--core {
-        margin-left: calc(50% - 644px);
+        margin-left: 0;
     }
 }
 
